[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModulePrimaryStat/HeatPrimaryStat_ToggleButtonBackground.png" type="Texture" id=2]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModulePrimaryStat/HeatPrimaryStat_BodyBackground.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/TowerIngredientIcons/SingleIngredientPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModulePrimaryStat/HeatPrimaryStatPanel.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Theme" id=7]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 2 )
VScrollBar/styles/grabber_highlight = SubResource( 3 )
VScrollBar/styles/grabber_pressed = SubResource( 4 )
VScrollBar/styles/scroll = SubResource( 5 )
VScrollBar/styles/scroll_focus = SubResource( 6 )

[node name="HeatPrimaryStatPanel" type="MarginContainer"]
margin_right = 106.0
margin_bottom = 31.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 106.0
margin_bottom = 35.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_left = 26.0
margin_right = 80.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 6

[node name="ToggleStatButton" type="TextureButton" parent="VBoxContainer/MarginContainer"]
margin_right = 54.0
margin_bottom = 11.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 54.0
margin_bottom = 11.0
mouse_filter = 2
custom_constants/margin_top = 2

[node name="StatDisplayLabel" type="Label" parent="VBoxContainer/MarginContainer/Marginer"]
margin_left = 13.0
margin_top = 2.0
margin_right = 41.0
margin_bottom = 11.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Current"
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 11.0
margin_right = 106.0
margin_bottom = 35.0
mouse_filter = 2

[node name="StatBodyBackground" type="TextureRect" parent="VBoxContainer/MarginContainer2"]
margin_right = 106.0
margin_bottom = 24.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer2"]
margin_right = 106.0
margin_bottom = 24.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 7 )

[node name="EffectPanel" parent="VBoxContainer/MarginContainer2/ScrollContainer" instance=ExtResource( 4 )]
margin_right = 106.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 3
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2
[connection signal="pressed" from="VBoxContainer/MarginContainer/ToggleStatButton" to="." method="_on_ToggleStatButton_pressed"]
